feat: ignore some files

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "hammers/tmux/plugins/tpm"]
 	path = hammers/tmux/plugins/tpm
 	url = https://github.com/tmux-plugins/tpm
+	ignore = dirty
