--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 hammers/tmux/plugins
+hammers/vim/bundle
 
 # Created by https://www.gitignore.io/api/macos
 # Edit at https://www.gitignore.io/?templates=macos
