--- a/.gitmodules
+++ b/.gitmodules
@@ -18,3 +18,6 @@
 	url = https://github.com/rime/librime.git
 	ignore = dirty
 	ignore = dirty
+[submodule "hammers/emacs/3rdparty/liberime"]
+	path = hammers/emacs/3rdparty/liberime
+	url = https://github.com/merrickluo/liberime.git
