--- a/hammers/brew/Brewfile
+++ b/hammers/brew/Brewfile
@@ -2,3 +2,4 @@ cask_args appdir: '/Applications'
 tap 'd12frosted/emacs-plus'
 brew 'emacs-plus@29', args: ["with-imagemagick", "with-native-comp"]
 brew 'cmake'
+brew 'gcc'
